--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -25,12 +25,9 @@ html lang="en"
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand href="#"UploadSlides
+          a.navbar-brand href="/"スライドアップローダー
           .navbar-collapse.collapse.navbar-responsive-collapse
             ul.nav.navbar-nav
-              li= link_to "Link 1", "/path1"
-              li= link_to "Link 2", "/path2"
-              li= link_to "Link 3", "/path3"
 
     .container
       .row
@@ -38,13 +35,13 @@ html lang="en"
           = bootstrap_flash
           = yield
         .col-lg-3
-          .well.sidebar-nav
-            h3 Sidebar
-            ul.nav.nav-list
-              li.nav-header Sidebar
-              li= link_to "Link 1", "/path1"
-              li= link_to "Link 2", "/path2"
-              li= link_to "Link 3", "/path3"
+          / .well.sidebar-nav
+          /   h3 最新スライド
+          /   ul.nav.nav-list
+          /     li.nav-header
+          /       -@slides.each do |slide|
+          /         li
+                    = link_to slide[:filename], download_path(slide[:filepath])
 
       footer
-        p &copy; Company 2017
+        p &copy; Bird Department 2017
