--- a/app/views/slides/new.html.slim
+++ b/app/views/slides/new.html.slim
@@ -1,3 +1,4 @@
-= form_tag '/slides', method: :post, multipart: true do
-  = file_field_tag :file
-  = submit_tag
+- model_class = Slide
+.page-header
+  h1=t '.title', default: [:'helpers.titles.new', 'New %{model}'], model: model_class.model_name.human.titleize
+= render partial: "form"
