--- a/app/views/slides/_form.html.slim
+++ b/app/views/slides/_form.html.slim
@@ -1,4 +1,7 @@
 = form_tag '/slides', method: :post, multipart: true do
   .form-group
+    p 投稿者
+    = text_field_tag :name
+
     = file_field_tag :file
     = submit_tag nil, class: 'btn btn-primary'
