--- a/app/views/slides/index.html.slim
+++ b/app/views/slides/index.html.slim
@@ -2,13 +2,17 @@
 .page-header
   h1 スライド一覧
   p クリックしたらダウンロードできます
+
+  = link_to "新規スライドはこちら", new_slides_path
 table.table.table-striped
   thead
     tr
       th スライド
+      th 作成者
   tbody
     - @slides.each do |slide|
       tr
         td= link_to slide[:filename], download_path(slide[:filepath])
+        td =slide[:name]
 
 
